fix shifting hero text

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ header p {
 }
 
 .slide {
+    object-fit: cover;
     position: absolute;
     inset: 0; /* shorthand for top:0; left:0; right:0; bottom:0 */
     width: 100%;
